--- a/index.html
+++ b/index.html
@@ -90,8 +90,10 @@
         <div class="comments">
           <span class="title">zuck</span>
           <span>Good to be back home with this nugget.</span>
-          <span class="hashtag">#MenyalaAbangkuh🔥</span>
-          <span class="hashtag">#KelazzCapt👑</span>
+          <span class="hashtag">#SpartaCodingClub</span>
+          <span class="hashtag">#CloneCoding</span>
+          <span class="hashtag">#Instagram </span>
+          <span class="hashtag">#LearningX</span>
         </div>
         <div class="count">View all 4.093 comments</div>
         <div class="time">5 days ago</div>
